[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "disdialogue"
version = "1.0.0"
description = "Discord dialog simulator — create and test multi-character Discord conversations using webhooks"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.7"
authors = [
    {name = "OctoPass", email = "octopassik@users.noreply.github.com"},
]
keywords = [
    "discord",
    "dialog",
    "simulator",
    "conversation",
    "webhook",
    "chat",
    "discord-bot",
    "discord-tools",
    "discord-webhook",
    "roleplay",
    "pyqt5",
    "gui",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Communications :: Chat",
    "Topic :: Software Development :: Testing",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Environment :: X11 Applications :: Qt",
    "Natural Language :: English",
    "Natural Language :: Russian",
]
dependencies = [
    "PyQt5>=5.15.0",
    "aiohttp>=3.8.0",
    "discord.py>=2.0.0",
    "certifi>=2023.0.0",
]

[project.urls]
Homepage = "https://octopassik.github.io/DisDialogue/"
Repository = "https://github.com/OctoPassik/DisDialogue"
"Bug Tracker" = "https://github.com/OctoPassik/DisDialogue/issues"
Download = "https://github.com/OctoPassik/DisDialogue/releases"

[project.gui-scripts]
disdialogue = "main:main"
